[package]
name = "nest"
version = "0.0.3"
edition = "2024"
authors = ["Vincent Brodin <vincent.brodin21@gmail.com>"]
license = "MIT"
repository = "https://github.com/VincentBrodin/nest"
readme = "README.md"
description = "An automatic window switcher for Hyprland"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.42"
dirs = "6.0.0"
thiserror = "2.0.17"
hyprland = "0.4.0-beta.3"
toml = "0.9.7"
serde = "1.0.228"
log = "0.4"
fern = "0.7"
