[package]
version = "0.0.6"
name = "hypr-nest"
description = "An automatic window switcher for Hyprland"
edition = "2024"
authors = ["Vincent Brodin <vincent.brodin21@gmail.com>"]
license = "MIT"
repository = "https://github.com/VincentBrodin/nest"
readme = "README.md"
keywords = ["hyprland", "tool", "utility"]

[[bin]]
name = "nest"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4.42"
dirs = "6.0.0"
thiserror = "2.0.17"
hyprland = "0.4.0-beta.3"
toml = "0.9.7"
serde = "1.0.228"
log = "0.4"
fern = "0.7"
